Correctly align edit button

--- a/css/src/_edit-button.scss
+++ b/css/src/_edit-button.scss
@@ -35,6 +35,10 @@
 			color:#00a0d2;
 		}
 	}
+
+	.wp-menu-name {
+		text-align: left;
+	}
 }
 
 .amm-edit-options {
